Wed Jan  1 11:36:03 CET 2014
xap/transmission-2.60-i486-1_microlinux.txz: Downgraded.
	Transmission's GTK3 client keeps forgetting its preferences. Until this gets
	sorted out, we're reverting to 2.60, the last know version to build the GTK2
	client (--with-gtk=2), which isn't affected by this bug. 
+--------------------------+
Mon Dec 30 14:27:32 CET 2013
Microlinux Enterprise Desktop 14.1 32-bit released! This is an LTS release,
which means packages will be maintained for as long as the underlying Slackware
system is officially supported.

MLED 14.1 32-bit provides the following extra software:

AP
|-- cdlabelgen
|-- p7zip
|-- recode
|-- sbopkg
`-- unrar

D
|-- acpica
|-- jdk
|-- lua
|-- numpy
|-- orc
|-- perl-cairo
|-- perl-event
|-- perl-extutils-depends
|-- perl-extutils-pkgconfig
|-- perl-glib
|-- perl-gtk2
|-- perl-libintl
|-- perl-pango
`-- scons

GNOME
|-- atkmm
|-- brasero
|-- cairomm
|-- evince
|-- gdm
|-- glibmm
|-- gnote
|-- goocanvas
|-- gthumb
|-- gtkmm
|-- libgnomecanvas
|-- libgnomecups
|-- libgnomeprint
|-- libgnomeprintui
|-- libsigc++
|-- libunique
|-- mm-common
|-- pangomm
|-- pygoocanvas
`-- totem-pl-parser

L
|-- BeautifulSoup
|-- cryptopp
|-- enca
|-- gsl
|-- imlib2
|-- jbig2dec
|-- libburn
|-- libisoburn
|-- libisofs
|-- lxml
|-- protobuf
|-- pysetuptools
|-- pyxdg
|-- tolua++
`-- wxGTK

LOCALE
|-- mozilla-firefox-l10n
|-- mozilla-thunderbird-l10n
`-- openoffice-langpack

MULTIMEDIA
|-- a52dec
|-- cddb-py
|-- celt
|-- dirac
|-- faac
|-- faad2
|-- ffmpeg
|-- flashplayer-plugin
|-- frei0r
|-- gsm
|-- gst-ffmpeg
|-- gst-plugins-bad
|-- gst-plugins-ugly
|-- id3lib
|-- ladspa_sdk
|-- lame
|-- libaacs
|-- libass
|-- libavc1394
|-- libbluray
|-- libcdaudio
|-- libcuefile
|-- libdc1394
|-- libdca
|-- libdv
|-- libdvdcss
|-- libdvdnav
|-- libiec61883
|-- libilbc
|-- libkate
|-- libmms
|-- libmodplug
|-- libmp4v2
|-- libmpeg2
|-- libmusicbrainz
|-- libmusicbrainz3
|-- libquicktime
|-- libreplaygain
|-- libshout
|-- libvpx
|-- live555
|-- lsdvd